various updates and comments from Gary

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
                     My father proposed the idea of applying an epoxy/resin-based product to the floor, a suggestion that resonated with the homeowner's vision. Although the concrete floor appeared in good shape to me, the homeowner desired more than just a bare-looking surface. She sought a floor that not only cleaned easily but also complemented the sleek black finish of her recently purchased Lincoln Navigator. The chosen color was a vibrant lime green, an exclusive custom shade we sourced from a local boat repair supply store in Long Beach, CA.
                  </p>
                  <p>
-                    Back in 2003, technology was not as advanced as it is today, and we lacked the convenience of smartphones to capture photos or videos. Unfortunately, I don't have any visual records of that particular job. However, despite it being my first experience with epoxy, the end result was remarkable and left a lasting impression on both the homeowner and myself.
+                    Back in 2003, technology was not as advanced as it is today, and we lacked the convenience of smartphones to capture photos or videos. However, despite it being my first experience with epoxy, the end result was remarkable and left a lasting impression on both the homeowner and myself.
                 </p>
                 <p>
                     At Garage Epoxy Services, we've come a long way since then, and we're committed to delivering even more exceptional results for your epoxy flooring projects today!
@@ -201,7 +201,7 @@
                     <ul>
                         <li><h2>Contact</h2></li>
                         <li><a href="/contact.html">6064 Hazelhurst Place, #12<br>North Hollywood, CA 91606</a></li>
-                        <li><a href="tel:555-779-4407">T: (818) 555-5555</a></li>
+                        <li><a href="tel:818-285-9308">T: (818) 285-9308</a></li>
                         <li><a href="mailto:garageepoxyservices@gmail.com">Click to Email</a></li>
                     </ul>
                 </div>
