--- a/contact.html
+++ b/contact.html
@@ -114,56 +114,7 @@
                 <h2 class="title">Send a Message</h2>
                 <p>If you have any questions or concerns please feel free to reach out to us.  We respond to every call and email.</p>
                 <form id="contact" name="Contact Form2" method="post" data-netlify="true" netlify>
-                        <div class="input-group">
-                            <label for="name">Full Name</label>
-                            <input id="name" aria-label="name" class="input1" name="name" placeholder="Full Name" type="text" tabindex="1" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-
-                        <div class="input-group">
-                            <label for="email">Email</label>
-                            <input id="email" aria-label="email" class="input1 right" name="email" placeholder="Email Address" type="email" tabindex="2" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-
-                        <div class="input-group">
-                            <label for="phone">Phone</label>
-                            <input id="phone" aria-label="phone number" class="input1" name="phone" placeholder="Phone Number" type="tel" tabindex="3" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-                        <div class="input-group">
-                            <label for="location">Location</label>
-                            <input id="location" aria-label="location" class="input1" name="location" placeholder="Your Location" type="text" tabindex="4" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-                        <div class="input-group">
-                            <label for="howBig">How Big is the Garage?</label>
-                            <input id="howBig" aria-label="How Big is the Garage?" class="input1 right" name="howBig" placeholder="1, 2, 3, or 4 (or more) cars" type="text" tabindex="5" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-                        <div class="input-group">
-                            <label for="repair">Does the Concrete Need Any Repairs?</label>
-                            <input id="repair" aria-label="Are There Any Repairs Needed to the Concrete?" name="repair" placeholder="no cracks / some major cracks" type="text" tabindex="5" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-                        <div class="input-group">
-                            <label for="color">What Color Epoxy Do You Like?</label>
-                            <input id="color" aria-label="What Color Epoxy Do You Like?" class="input1" name="color" placeholder="Grey / Tan / Custom" type="text" tabindex="5" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-                        <div class="input-group">
-                            <label for="when">When Will You Need It Done?</label>
-                            <input id="when" aria-label="When Will You Need It Done?" class="input1 right" name="when" placeholder="ASAP / Next Week / Next Month" type="text" tabindex="5" required>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-                        <div class="input-group textarea">
-                            <label for="message">Message</label>
-                            <textarea id="message" aria-label="write your message" name="message" placeholder="Tell us about what you need help with, or any other questions. If you know the square footage of your project area, or location, etc., please include that information here!" type="text" tabindex="6" required></textarea>
-                            <div aria-hidden="true" class="hover-box"></div>
-                        </div>
-                    <p class="form-submit">
-                        <button name="submit" type="submit" id="contact-submit" class="button-solid" data-submit="...Sending">Submit</button>
-                    </p>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPDgE-8ej__oBO7tvyubg_2rb1g93xJthOm43oo8UfCVsGFA/viewform?embedded=true" width="640" height="2500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </form>
             </div>
             <div class="contact-right">
@@ -173,7 +124,7 @@
                 </div>
                 <div class="info-group">
                     <span class="heading">Phone</span>
-                    <a class="info" href="tel:555-779-4407">(555) 779-4407</a>
+                    <a class="info" href="tel:818-285-9308">T: (818) 285-9308</a>
                 </div>
                 <div class="info-group">
                     <span class="heading">Email</span>
@@ -212,7 +163,7 @@
                     <ul>
                         <li><h2>Contact</h2></li>
                         <li><a href="/contact.html">6064 Hazelhurst Place, #12<br>North Hollywood, CA 91606</a></li>
-                        <li><a href="tel:555-779-4407">T: (818) 555-5555</a></li>
+                        <li><a href="tel:818-285-9308">T: (818) 285-9308</a></li>
                         <li><a href="mailto:garageepoxyservices@gmail.com">Click to Email</a></li>
                     </ul>
                 </div>
