--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.company.com">
+    <link rel="canonical" href="https://www.garageepoxyservices.com">
 
     <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="garage epoxy, garage, epoxy floors, epoxy flooring, epoxy pour">
 
     <!--Social Media Display-->
     <meta property="og:title" content=""/>
@@ -107,7 +107,7 @@
                 <div class="heroText">
                     <h1 id="home-h">Let Us Help You Customize Your Floors</h1>
                     <p>
-                        Gary's Epoxy Service in the Greater Los Angeles area offers durable, high-gloss flooring solutions that enhance the aesthetics and functionality of commercial and residential spaces.</p>
+                        Garage Epoxy Services in the Greater Los Angeles area offers durable, high-gloss flooring solutions that enhance the aesthetics and functionality of commercial and residential spaces.</p>
                     <p>With a team of skilled professionals and a wide range of customization options, we transform concrete surfaces into stunning, long-lasting epoxy masterpieces.</p>
                     <a class="button-solid" href="/contact.html" target="_blank" rel="noopener">
                         Click Here for a Free Quote
@@ -133,7 +133,7 @@
                 </picture>
                 <h2></h2>
                 <p>
-                    Epoxy Garage Services provides a durable and visually appealing solution to protect and enhance your garage floor. 
+                    Garage Epoxy Services provides a durable and visually appealing solution to protect and enhance your garage floor. 
                 </p>
             </div>
             <div class="card">
@@ -147,7 +147,7 @@
             </div>
             <div class="card">
                 <picture>
-                    <img aria-hidden="true" decoding="async" src="/images/service3.svg" alt="appliance" width="48" height="48">
+                    <img aria-hidden="true" decoding="async" src="/images/service2.svg" alt="appliance" width="48" height="48">
                 </picture>
                 <h2></h2>
                 <p>
@@ -279,7 +279,7 @@
                     <ul>
                         <li><h2>Contact</h2></li>
                         <li><a href="/contact.html">6064 Hazelhurst Place, #12<br>North Hollywood, CA 91606</a></li>
-                        <li><a href="tel:555-779-4407">T: (818) 555-5555</a></li>
+                        <li><a href="tel:818-285-9308">T: (818) 285-9308</a></li>
                         <li><a href="mailto:garageepoxyservices@gmail.com">Click to Email</a></li>
                     </ul>
                 </div>
