Final Live Website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="https://www.garageepoxyservices.com">
 
     <meta name="description" content="">
-    <meta name="keywords" content="garage epoxy, garage, epoxy floors, epoxy flooring, epoxy pour">
+    <meta name="keywords" content="garage epoxy, garage, epoxy floors, epoxy flooring, epoxy pour, garage epoxy services">
 
     <!--Social Media Display-->
     <meta property="og:title" content=""/>
