added social media links

--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,10 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-light.png" alt="logo" width="264" height="78"></a>
+                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-light.png" alt="logo" width="264" height="78"></a> 
+                <a class="logo" href="https://www.facebook.com/LosAngelesgaragefloorepoxyinstallation"><img loading="lazy" decoding="async" src="/images/facebook.svg" alt="logo" width="264" height="78"></a>   
+                <a class="logo" href="https://www.instagram.com/garage_epoxy_services"><img loading="lazy" decoding="async" src="/images/instagram.svg" alt="logo" width="264" height="78"></a>
+                <a class="logo" href="https://www.youtube.com/@Garagefloorepoxy-vl3gg"><img loading="lazy" decoding="async" src="/images/youtube.svg" alt="logo" width="264" height="78"></a>
             </div>
             <div class="right-section">
                 <div class="lists">
