updated youtube links in projects section

--- a/projects.html
+++ b/projects.html
@@ -166,8 +166,9 @@
                      </picture>
                 </div>
                 <div display="flex" flex-direction="row" justify-content="center">
-                    <object data="http://www.youtube.com/embed/Xjwyy_A2zDA" width="800" height="506"></object>
-                    <object data="http://www.youtube.com/embed/nSRXnnVE7SU" width="800" height="506"></object>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nSRXnnVE7SU?si=OXZzZE3LTOix9jLE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Xjwyy_A2zDA?si=QFvIOKR9zC-13YHZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1Pj49nqQ8CM?si=tUY_7hmSgSYZG5o2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
